[gd_scene load_steps=5 format=2]

[ext_resource path="res://Assets/Scripts/CoinUp.gd" type="Script" id=1]
[ext_resource path="res://Scenes/CoinDown.tscn" type="PackedScene" id=2]
[ext_resource path="res://Assets/Sprites/Coin.png" type="Texture" id=3]

[sub_resource type="CircleShape2D" id=1]
radius = 20.0

[node name="CoinUp" type="RigidBody2D" groups=[
"CoinUp",
]]
collision_layer = 4
collision_mask = 4
continuous_cd = 2
script = ExtResource( 1 )
coinDown = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 5, 5 )
texture = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="Area2D" type="Area2D" parent="." groups=[
"CoinUp",
]]

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 1 )

[node name="Area2D2" type="Area2D" parent="." groups=[
"CoinPickupArea",
]]
collision_mask = 3

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Area2D2"]
shape = SubResource( 1 )
[connection signal="area_entered" from="Area2D" to="." method="_on_Area2D_area_entered"]
[connection signal="area_exited" from="Area2D" to="." method="_on_Area2D_area_exited"]
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="area_entered" from="Area2D2" to="." method="_on_Area2D_area_entered"]
[connection signal="area_exited" from="Area2D2" to="." method="_on_Area2D_area_exited"]
[connection signal="body_entered" from="Area2D2" to="." method="_on_Area2D_body_entered"]
